src/app.scss
:root {
  --bg-color: #f5f5f5;
  --primary-color: #ee2a10;
  --secondary-color: #1f1f1f;
  --primary-text-color: #151515;
  --secondary-text-color: #666;
  --muted-text-color: #ddd;
  --container-max-width: 860px;

  font-family: 'Ubuntu', sans-serif;
  color: var(--primary-text-color);
  background-color: var(--bg-color);
  font-size: 16px;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  overscroll-behavior: none;
}

i {
  margin: 0 0.2em;
}

.container {
  padding: 2.5rem 3.75rem;
  max-width: var(--container-max-width);
  margin: 0 auto;
}

a {
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

header a {
  color: var(--primary-text-color);
}

main a {
  color: var(--bg-color);
}

time + time:before {
  content: ' – ';
}

@media screen and (max-width: 980px) {
  :root {
    --container-max-width: unset;
  }
}

@media screen and (max-width: 400px) {
  .container {
    padding: 1rem 1.5rem;
  }
}

@media screen and (max-width: 320px) {
  :root {
    font-size: 14px;
  }
}

@media print {
  :root {
    --bg-color: #fff;
    --container-max-width: unset;
    --muted-text-color: #333;
    --secondary-color: #000;
    --primary-text-color: #151515;
    --secondary-text-color: #222;
  }

  .container {
    padding: 1rem 0;
  }
}

@media screen {
  .print {
    display: none !important;
  }
}

@media print {
  .no-print {
    display: none !important;
  }
}

